--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="container-fluid position-relative">
                 <div class="">
                     <a class="navbar-brand d-md-none" href="#">
-                        <img src="/assets/crimm-round-logo.png" alt="" class="img-responsive">
+                        <img src="assets/crimm-round-logo.png" alt="" class="img-responsive">
                     </a>
                 </div>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" sytle>
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="#">Features</a>
                       </li>
                       <a class="navbar-brand d-none d-md-block" href="#">
-                        <img src="/assets/crimm-round-logo.png" alt="">
+                        <img src="assets/crimm-round-logo.png" alt="">
                       </a>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
@@ -56,7 +56,11 @@
                 </div>
               </nav>
         </header>
-        <main></main>
+
+        <main>
+            <h2 class="text-center" style="font-family: Anton; font-size: 5em;">Crimm</h2>
+        </main>
+
         <footer>
             <!-- place footer here -->
         </footer>
