--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>crimm | brownies</title>
+        <link rel="icon" type="image/x-icon" href="assets/crimm-round-logo.webp">
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -28,7 +29,7 @@
                 <div class="container-fluid position-relative">
                 <div class="">
                     <a class="navbar-brand d-md-none" href="#">
-                        <img src="assets/crimm-round-logo.png" alt="" class="img-responsive">
+                        <img src="assets/crimm-round-logo.webp" alt="" class="img-responsive">
                     </a>
                 </div>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" sytle>
@@ -43,7 +44,7 @@
                         <a class="nav-link" href="#">Features</a>
                       </li>
                       <a class="navbar-brand d-none d-md-block" href="#">
-                        <img src="assets/crimm-round-logo.png" alt="">
+                        <img src="assets/crimm-round-logo.webp" alt="">
                       </a>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
@@ -58,12 +59,38 @@
         </header>
 
         <main>
-            <h2 class="text-center" style="font-family: Anton; font-size: 5em;">Crimm</h2>
+          <!-- <img src="assets/crimm-poolside.jpg" alt="" class="img-responsive mw-100" loading="lazy"> -->
+            <h2 class="text-center hero-text" style="font-family: Anton; font-size: 5em;">Crimm</h2>
         </main>
 
         <footer>
-            <!-- place footer here -->
-        </footer>
+          <div class="container">
+            Order now! (button that directs users to wa.me/ link)
+          </div>
+          
+          <div class="container" style="background-color: lightblue;">
+              <div class="row">
+                  <div class="col-md-4">
+                    <img src="assets/crimm-round-logo.webp" alt="" class="img-responsive w-50" loading="lazy">
+                  </div>
+                  <div class="col-md-4">
+                    <h4>Browse</h4>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul> 
+                  </div>
+                  <div class="col-md-4">
+                      <h4>Contact</h4>
+                      <p>Instagram</p>
+                      <p>Whatsapp icon, number</p>
+                      <p>Email</p>
+                  </div>
+              </div>
+          </div>
+      </footer>
+      
         <!-- Bootstrap JavaScript Libraries -->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
