--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <main>
           <!-- <img src="assets/crimm-poolside.jpg" alt="" class="img-responsive mw-100" loading="lazy"> -->
           <div class="container-fluid hero-img">
-            <h2 class="text-center hero-text" style="font-family: Anton; font-size: 5em;">Crimm</h2>
+            <h2 class="text-center hero-text" style="font-family: Anton; font-size: 3em;">Crimm.</h2>
             <div class="d-grid gap-2 d-md-flex justify-content-center text-center">
               <a href="#" class="btn hero-btn col-md-3">Order Now!</a>
               <a href="#" class="btn btn-secondary hero-button col-md-3">Pricing</a>
