--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
               <div class="col-md-4">
                 <h4 class="footer-list-header">Contact</h4>
                 <ul class="list-unstyled">
-                  <li><a href="#" class="text-white"><i class="bi bi-instagram"></i> Instagram</a></li>
-                  <li><a href="#" class="text-white"><i class="bi bi-whatsapp"></i> Whatsapp</a></li>
-                  <li><a href="#" class="text-white"><i class="bi bi-envelope"></i> Email</a></li>
+                  <li><a href="https://www.instagram.com/crimm.co/" class="text-white"><i class="bi bi-instagram"></i><img src="assets/icons8-instagram.svg" class="img-responsive"></img> @Crimm.co</a></li>
+                  <li><a href="#" class="text-white"><i class="bi bi-whatsapp"></i><img src="assets/icons8-whatsapp.svg" class="img-responsive"></img> Whatsapp</a></li>
+                  <li><a href="mailto:crimm.kch@gmail.com" class="text-white"><i class="bi bi-envelope"></i><img src="assets/icons8-email-48.png" class="img-responsive"></img> crimm.kch@gmail.com</a></li>
                 </ul>
               </div>
             </div>
